--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
 
 <body>
   <header>
-    <div>
-      <img class="gif" src="imagem/imagem1/Chamander evolução Nintendo Blast.gif" alt="" />
-    </div>
     <div class="banner">
       <h1>POKEMON News</h1>
     </div>
-    <div class="div1">
 
-    </div>
   </header>
   <nav>
     <div id="menu">
@@ -37,50 +32,39 @@
   <main class="conteiner">
     <div id="duascolum">
       <div class="Principal">
-        <a href="pagina3,1.html"><img id="img1" src="imagem/imagem1/pokemon-go-evento-jardim-reluzente.jpg" alt="" /></a>
-        <a href="pagina3,1.html">
-          <p class="p1">
-            A Niantic anunciou todos os detalhes do evento Jardim Reluzente do
-            Pokémon GO, que contará com a estreia de Petilil Brilhante.
-            confira:
-          </p>
-        </a>
-      </div >
-      <div class="Principal">
-        <a href="pagina3,2.html"><img id="img1" src="imagem/imagem1/pokemon-scarlet-violet-mystery-gift.jpg""></a>
-          <a href=" pagina3,2.html">
-          <p class="p1">   Pokémon Scarlet e Violet - Códigos de Mystery Gift Ativos
-          (Julho/2023)</p>
-       </a>
+        <a href="pagina2.html"><img class="img1" src="imagens/resumo-da-cartografia.jpg"alt=""></a>
+        <a href="pagina2.html"><p class="p1">Cartografia</p></a>
       </div>
-
       <div class="Principal">
-        <a href="pagina3,3.html"><img id="img1" src="imagem/imagem1/pokemon-sleep.png""></a>
-        <a href=" pagina3,3.html">
-        <p class="p1">Pokémon Sleep será lançado neste domingo (16/07)</p>
-     </a>
+        <a href="pagina3,1.html"><img class="img1" src="imagens/images (8).jpeg"></a>
+          <a href=" pagina3,1.html"><p class="p1"></p></a>
       </div>
-      
       <div class="Principal">
-        <a href="pagina3,4.html"><img id="img1" src="imagem/imagem1/pokemon-go-evento-semana-aventura-2023.jpg""></a>
-        <a href=" pagina3,4.html">
-        <p class="p1">Pokémon GO - Evento Semana Aventura 2023(16/07)</p>
-     </a>
-        
+        <a href="pagina3,2.html"><img class="img1" src="imagem/imagem1/pokemon-sleep.png"></a>
+        <a href=" pagina3,2.html"><p class="p1"></p></a>
       </div>
+      <div class="Principal">
+        <a href="pagina3,3.html"><img class="img1" src="imagem/imagem1/pokemon-go-evento-semana-aventura-2023.jpg"></a>
+        <a href=" pagina3,3.html"><p class="p1"></p></a>
+        <div class="Principal">
+          <a href="pagina3,4.html"><img class="img1" src="imagem/imagem1/pokemon-go-evento-semana-aventura-2023.jpg"></a>
+      <a href=" pagina3,4.html"><p class="p1"></p></a>
+          <div class="Principal">
+            <a href="pagina3,5.html"><img class="img1" src="imagem/imagem1/pokemon-go-evento-semana-aventura-2023.jpg"></a>
+      <a href=" pagina3,5.html"><p class="p1"></p></a>
+          </div>
+        </div>
+        <div class="Principal">
+          <a href="pagina3,6.html"><img class="img1" src="imagem/imagem1/Pokemon_SV_Screenshot_45.jpg"></a>
+          <a href=" pagina3,6.html"><p class="p1"></p></a>
+        </div>
     </div>
-    <div class="Principal">
-      <a href="pagina3,5.html"><img id="img1" src="imagem/imagem1/Pokemon_SV_Screenshot_45.jpg""></a>
-      <a href=" pagina3,5.html">
-      <p class="p1">Pokémon Scarlet e Violet - Eventos de Tera Raid Battle (Julho/2023). </p>
-    </div>
-  
   </main>
   <footer>
     <div id="git">
-    <a class="link" href="https://github.com/kayquelopes">Meu github</a>
-    <a class="link" href="pagina2.html">Historia</a>
-  </div>
+      <a class="link" href="https://github.com/kayquelopes">Meu github</a>
+
+    </div>
   </footer>
 </body>
 
