--- a/pagina3,2.html
+++ b/pagina3,2.html
@@ -11,19 +11,11 @@
 
 <body>
   <header>
-    <div>
-      <div>
-        <img class="gif" src="imagem/imagem1/Chamander evolução Nintendo Blast.gif" alt="" />
-      </div>
-    </div>
+  
     <div class="banner">
       <h1>POKEMON News</h1>
     </div>
-    <div class="div1">
-
-      </p>
-    </div>
-    </div>
+   
   </header>
   <nav>
     <div id="menu">
@@ -46,7 +38,7 @@
       </p>
     </div>
     <div class="Principal2">
-      <div id="hisimg">
+      <div class="hisimg">
         <img class="imghis" src="imagem/imagem1/pokemon-scarlet-violet-mystery-gift.jpg" alt="">
       </div>
       <p class="p3">O recurso de Mystery Gift existe há várias gerações nos jogos principais de Pokémon e possibilita
@@ -54,15 +46,7 @@
         Mystery Gift em Pokémon Scarlet e Violet, dentro da opção do menu "Poké Portal", há quatro opções para
         selecionar:
       </p>
-      <ul class="listnot">
-        <li>Get via Internet - opção disponível para eventos que são ativados para todos os jogadores sem a necessidade
-          de códigos</li>
-        <li>Get via Code/Password - opção disponível para distribuições que podem ser resgatadas apenas usando um
-          determinado código</li>
-        <li>Check Mystery Gift - permite que o jogador visualize os Mystery Gifts já resgatados anteriormente</li>
-        <li>Check Poké Portal News - permite consultar notícias relacionadas aos jogos, como eventos de Tera Raid Battle
-        </li>
-      </ul>
+     
       <p class="p3">Assim, quando você for resgatar um código de Mystery Gift ativo, você deve selecionar a opção "Get
         via Code/Password".
       </p>
@@ -79,15 +63,7 @@
         Violet. Os códigos estão ordenados conforme a data de expiração, e o código mais recente incluído na lista será
         identificado com uma exclamação (!):
       </p>
-      <ul class="listnot">
-        <li>THA12022CHAMP - Oferece ao jogador um Grimmsnarl Shiny; Período: Até o dia 18 de agosto de 2023</li>
-        <li>DARKTERA0006 - Oferece ao jogador um Charizard com Tipo Tera Dark; Período: Até o dia 31 de agosto de 2023</li>
-        <li>(!) GETY0URMEW - Oferece ao jogador um Mew com Tipo Tera aleatório; Período: Até o dia 18 de setembro de 2023</li>
-        <li>NATSUN0T0KKUN - Oferece ao jogador 5 Bananas, 5 Butter, 5 Peanut Butter e 5 Red Poké Ball Picks; Período: Até o dia 30 de setembro de 2023</li>
-        <li>LEVELUP - Oferece ao jogador 10 Rare Candy; Período: Até o dia 02 de outubro de 2023</li>
-        <li>REV1VE - Oferece ao jogador 5 Max Revive; Período: Até o dia 02 de outubro de 2023</li>
-        <li>CATCHBYBALL - Oferece ao jogador 5 Nest, Dive, Dusk, Timer, Quick e Luxury Balls; Período: Até o dia 02 de outubro de 2023</li>
-      </ul>
+     
     </div>
 
   </main>
