--- a/pagina3,3.html
+++ b/pagina3,3.html
@@ -11,17 +11,11 @@
 
 <body>
   <header>
-    <div>
-      <div>
-        <img class="gif" src="imagem/imagem1/Chamander evolução Nintendo Blast.gif" alt="" />
-      </div>
-    </div>
+   
     <div class="banner">
       <h1>POKEMON News</h1>
     </div>
-    <div class="div1">
-
-    </div>
+    
   </header>
   <nav>
     <div id="menu">
@@ -42,7 +36,7 @@
       <p class="p2">Pokémon Sleep será lançado neste domingo (16/07)</p>
     </div>
     <div class="Principal2">
-      <div id="hisimg">
+      <div class="hisimg">
         <img class="imghis" src="imagem/imagem1/pokemon-sleep.png" alt="">
       </div>
       <p class="p3">Segundo o comunicado de imprensa da The Pokémon Company, o Pokémon Sleep, o aplicativo que
