--- a/pagina3,5.html
+++ b/pagina3,5.html
@@ -11,14 +11,8 @@
 
 <body>
   <header>
-    <div>
-      <img class="gif" src="imagem/imagem1/Chamander evolução Nintendo Blast.gif" alt="" />
-    </div>
     <div class="banner">
       <h1>POKEMON News</h1>
-    </div>
-    <div class="div1">
-
     </div>
   </header>
   <nav>
@@ -43,7 +37,7 @@
     </div>
     </div>
     <div class="Principal2">
-      <div id="hisimg">
+      <div class="hisimg">
         <img class="imghis" src="imagem/imagem1/Pokemon_SV_Screenshot_45.jpg" alt="">
       </div>
       <p class="p3">As Tera Raid Battles representam uma modalidade de batalha em Pokémon Scarlet e Violet que permite enfrentar um Pokémon especial em grupo de até quatro jogadores. Os cristais que possuem Tera Raid Battle estão espalhados por toda a região de Paldea e o jogador poderá visualizar as reides disponíveis em seu mapa, as quais mudam diariamente. As batalhas de reide possuem diferentes tipos de dificuldade, que variam de 1 estrela (mais fácil) a 7 estrelas (mais difícil).</p>
@@ -51,41 +45,23 @@
       <p class="p3">Quando um Pokémon é derrotado em uma Tera Raid Battle, ele possui 100% de chance de captura. Além disso, o jogador receberá vários itens importantes e raros como recompensa..</p>
       <p class="p3">Esta publicação será atualizada regularmente com todos os próximos eventos programados de Tera Raid Battles.</p>
       <p class="p2">Mewtwo</p>
-      <div id="hisimg">
+      <div class="hisimg">
         <img class="imghis" src="imagem/imagem1/Get_Mew_Mewtwo!_Mewtwo_Artwork_png_jpgcopy.jpg" alt="">
       </div>
       <p class="p3">As Tera Raid Battles representam uma modalidade de batalha em Pokémon Scarlet e Violet que permite enfrentar um Pokémon especial em grupo de até quatro jogadores. Os cristais que possuem Tera Raid Battle estão espalhados por toda a região de Paldea e o jogador poderá visualizar as reides disponíveis em seu mapa, as quais mudam diariamente. As batalhas de reide possuem diferentes tipos de dificuldade, que variam de 1 estrela (mais fácil) a 7 estrelas (mais difícil).</p>
 
-      <ul class="listnot">
-        <li>Data: De 31 de agosto a 17 de setembro</li>
-        <li>Tipo Tera Definido: Psíquico</li>
-        <li>Dificuldade: 7 estrelas</li>
-      </ul>
-
 
       <p class="p2">Scizor, Hydreigon e Blissey</p>
-      <div id="hisimg">
+      <div class="hisimg">
         <img class="imghis" src="imagem/imagem1/PPN28.jpeg" alt="">
       </div>
       <p class="p3">As Tera Raid Battles representam uma modalidade de batalha em Pokémon Scarlet e Violet que permite enfrentar um Pokémon especial em grupo de até quatro jogadores. Os cristais que possuem Tera Raid Battle estão espalhados por toda a região de Paldea e o jogador poderá visualizar as reides disponíveis em seu mapa, as quais mudam diariamente. As batalhas de reide possuem diferentes tipos de dificuldade, que variam de 1 estrela (mais fácil) a 7 estrelas (mais difícil).</p>
-
-      <ul class="listnot">
-        <li>Data: De 09 a 17 de agosto</li>
-        <li>Tipo Tera Definido: Aleatório</li>
-        <li>Dificuldade: 5 estrelas</li>
-      </ul>
-
       <p class="p2">Blissey, Hatterene e Grimmsnarl</p>
-      <div id="hisimg">
+      <div class="hisimg">
         <img class="imghis" src="imagem/imagem1/Blissey, Hatterene e Grimmsnarl.jpg" alt="">
       </div>
       <p class="p3">As Tera Raid Battles representam uma modalidade de batalha em Pokémon Scarlet e Violet que permite enfrentar um Pokémon especial em grupo de até quatro jogadores. Os cristais que possuem Tera Raid Battle estão espalhados por toda a região de Paldea e o jogador poderá visualizar as reides disponíveis em seu mapa, as quais mudam diariamente. As batalhas de reide possuem diferentes tipos de dificuldade, que variam de 1 estrela (mais fácil) a 7 estrelas (mais difícil).</p>
 
-      <ul class="listnot">
-        <li>Data: De 17 a 31 de agosto</li>
-        <li>Tipo Tera Definido: Aleatório</li>
-        <li>Dificuldade: 5 estrelas</li>
-      </ul>
   </main>
   <footer>
     <div id="git">
