--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="shortcut icon" href="imagem/pokebola.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="imagens/41488-9-geography-download-free-image.png" type="image/x-icon" />
   <title>Pagina Principal</title>
 </head>
 
@@ -20,44 +20,62 @@
     <div id="menu">
       <ul>
         <li><a href="index.html">Página Inicial</a></li>
-        <li><a href="pagina2.html">Historia</a></li>
-        <li><a href="pagina3,1.html">Noticia1</a></li>
-        <li><a href="pagina3,2.html">Noticia2</a></li>
-        <li><a href="pagina3,3.html">Noticia3</a></li>
-        <li><a href="pagina3,4.html">Noticia4</a></li>
-        <li><a href="pagina3,5.html">Noticia5</a></li>
+        <li><a href="pagina2.html">Cartografia</a></li>
+        <li><a href="pagina3,1.html">Geopolitica</a></li>
+        <li><a href="pagina3,2.html">Climas</a></li>
+        <li><a href="pagina3,3.html">Relevo</a></li>
+        <li><a href="pagina3,4.html">Problemas Ambientais</a></li>
+        <li><a href="pagina3,5.html">Geografia Econômica</a></li>
+        <li><a href="pagina3,6.html">Sambaqui</a></li>
       </ul>
     </div>
   </nav>
   <main class="conteiner">
     <div id="duascolum">
       <div class="Principal">
-        <a href="pagina2.html"><img class="img1" src="imagens/resumo-da-cartografia.jpg"alt=""></a>
-        <a href="pagina2.html"><p class="p1">Cartografia</p></a>
+        <a href="pagina2.html"><img class="img1" src="imagens/resumo-da-cartografia.jpg" alt=""></a>
+        <a href="pagina2.html">
+          <p class="p1">Cartografia</p>
+        </a>
       </div>
       <div class="Principal">
         <a href="pagina3,1.html"><img class="img1" src="imagens/images (8).jpeg"></a>
-          <a href=" pagina3,1.html"><p class="p1"></p></a>
+        <a href=" pagina3,1.html">
+          <p class="p1">Geopolitica</p>
+        </a>
       </div>
       <div class="Principal">
-        <a href="pagina3,2.html"><img class="img1" src="imagem/imagem1/pokemon-sleep.png"></a>
-        <a href=" pagina3,2.html"><p class="p1"></p></a>
+        <a href="pagina3,2.html"><img class="img1" src="imagens/images (11).jpeg"></a>
+        <a href=" pagina3,2.html">
+          <p class="p1">Climas</p>
+        </a>
       </div>
       <div class="Principal">
-        <a href="pagina3,3.html"><img class="img1" src="imagem/imagem1/pokemon-go-evento-semana-aventura-2023.jpg"></a>
-        <a href=" pagina3,3.html"><p class="p1"></p></a>
-        <div class="Principal">
-          <a href="pagina3,4.html"><img class="img1" src="imagem/imagem1/pokemon-go-evento-semana-aventura-2023.jpg"></a>
-      <a href=" pagina3,4.html"><p class="p1"></p></a>
-          <div class="Principal">
-            <a href="pagina3,5.html"><img class="img1" src="imagem/imagem1/pokemon-go-evento-semana-aventura-2023.jpg"></a>
-      <a href=" pagina3,5.html"><p class="p1"></p></a>
-          </div>
-        </div>
-        <div class="Principal">
-          <a href="pagina3,6.html"><img class="img1" src="imagem/imagem1/Pokemon_SV_Screenshot_45.jpg"></a>
-          <a href=" pagina3,6.html"><p class="p1"></p></a>
-        </div>
+        <a href="pagina3,3.html"><img class="img1" src="imagens/relevo-1.jpg"></a>
+        <a href=" pagina3,3.html">
+          <p class="p1">Relevo</p>
+        </a>
+      </div>
+      <div class="Principal">
+        <a href="pagina3,4.html"><img class="img1" src="imagens/images (9).jpeg"></a>
+        <a href=" pagina3,4.html">
+          <p class="p1">Problemas Ambientais</p>
+        </a>
+      </div>
+      <div class="Principal">
+        <a href="pagina3,5.html"><img class="img1" src="imagens/images (10).jpeg"></a>
+        <a href=" pagina3,5.html">
+          <p class="p1">Geografia Econômica</p>
+        </a>
+      </div>
+    </div>
+    <div class="Principal">
+      <a href="pagina3,6.html"><img class="img1" src="imagens/images (13).jpeg"></a>
+      <a href=" pagina3,6.html">
+        <p class="p1">Sambaqui</p>
+      </a>
+    </div>
+    </div>
     </div>
   </main>
   <footer>
