--- a/pagina3,3.html
+++ b/pagina3,3.html
@@ -5,64 +5,108 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="shortcut icon" href="imagem/pokebola.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="imagens/41488-9-geography-download-free-image.png" type="image/x-icon" />
   <title>Pagina Principal</title>
 </head>
 
 <body>
   <header>
-   
+
     <div class="banner">
       <h1>POKEMON News</h1>
     </div>
-    
+
   </header>
   <nav>
     <div id="menu">
       <ul>
         <li><a href="index.html">Página Inicial</a></li>
-        <li><a href="pagina2.html">Historia</a></li>
-        <li><a href="pagina3,1.html">Noticia1</a></li>
-        <li><a href="pagina3,2.html">Noticia2</a></li>
-        <li><a href="pagina3,3.html">Noticia3</a></li>
-        <li><a href="pagina3,4.html">Noticia4</a></li>
-        <li><a href="pagina3,5.html">Noticia5</a></li>
-    
+        <li><a href="pagina2.html">Cartografia</a></li>
+        <li><a href="pagina3,1.html">Geopolitica</a></li>
+        <li><a href="pagina3,2.html">Climas</a></li>
+        <li><a href="pagina3,3.html">Relevo</a></li>
+        <li><a href="pagina3,4.html">Problemas Ambientais</a></li>
+        <li><a href="pagina3,5.html">Geografia Econômica</a></li>
+        <li><a href="pagina3,6.html">Sambaqui</a></li>
       </ul>
     </div>
   </nav>
   <main class="conteiner">
     <div class="Principal1">
-      <p class="p2">Pokémon Sleep será lançado neste domingo (16/07)</p>
+      <p class="p2">Relevo</p>
     </div>
     <div class="Principal2">
-      <div class="hisimg">
-        <img class="imghis" src="imagem/imagem1/pokemon-sleep.png" alt="">
-      </div>
-      <p class="p3">Segundo o comunicado de imprensa da The Pokémon Company, o Pokémon Sleep, o aplicativo que
-        transforma o sono em entretenimento, estará disponível na App Store e no Google Play no domingo, 16 de julho, às
-        19:00h no horário de Brasília.</p>
-      <p class="p3">Para jogar Pokémon Sleep, os Treinadores colocam seu smartphone ou Pokémon GO Plus + ao lado do
-        travesseiro e dormem. Quando acordarem, poderão verificar os resultados do rastreamento do sono, estudar os
-        estilos de sono dos Pokémon que apareceram e trabalhar em conjunto com o Professor Neroli, pesquisador de sono
-        do Pokémon, para registrá-los no Sleep Style Dex. Quanto mais os jogadores dormirem, e quanto maior o Snorlax se
-        tornar, mais Pokémon eles poderão encontrar e mais estilos de sono poderão descobrir.</p>
-      <p class="p3">Além disso, o dispositivo Pokémon GO Plus + estará disponível em breve nos varejistas participantes.
-        Os jogadores que conectarem seu Pokémon GO Plus + com o Pokémon Sleep e o Pokémon GO ganharão vários bônus no
-        jogo, incluindo um Pikachu usando touca noturna que os jogadores podem encontrar no Pokémon Sleep e uma Pesquisa
-        Especial no Pokémon GO que leva a um encontro com Snorlax usando uma touca noturna.
+      <p class="p3">O relevo é o conjunto de formas dispostas na superfície terrestre, logo, esse conceito reúne as
+        feições geomorfológicas que ocorrem na litosfera do planeta. As quatro grandes formas de relevo são montanha,
+        planalto, depressão e planície. O relevo é o conceito geográfico das diversas formas dispostas ao longo da
+        superfície do planeta.(MUNDO EDUCAÇÃO, 2023).
       </p>
-      <p class="p3">Atenção: Não coloque o dispositivo sob o travesseiro ou cobertores, pois ele pode superaquecer. O
-        Pokémon Sleep destina-se apenas a fins de entretenimento e não se destina a ser utilizado na detecção,
-        diagnóstico ou tratamento de qualquer condição médica ou doença.</p>
+      <p class="p3"> São formas de relevo:
+      </p>
+      <ul class="list">
+        <li>Montanhas</li>
+        <li>Planaltos</li>
+        <li>Planícies </li>
+        <li>Depressões.</li>
+      </ul>
+      <div class="hisimg">
+        <p class="referenciaimg">Figura 1 - Formas e componentes do relevo
+        </p>
+        <img class="imghis" src="climaimg/clima.webp" alt="">
+        <p class="referenciaimg" id="refImage">Fonte: RIBEIRO, 2023
+        </p>
+      </div>
+      <div class="hisimg">
+        <p class="referenciaimg">Figura 2 - Relevo
+        </p>
+        <img class="imghis" src="climaimg/clima.webp" alt="">
+        <p class="referenciaimg" id="refImage">Fonte: Baduka, 2023
+        </p>
+      </div>
+      <p class="p3">O relevo do Brasil foi categorizado por Aziz Ab’Sáber e Jurandyr Ross. De acordo com Ab’Sáber, o
+        Brasil é formado por um conjunto de planaltos e planícies. Ross identificou um conjunto de 28 unidades de relevo
+        no território brasileiro, que se dividem entre planaltos, planícies e depressões (BRASIL ESCOLA, 2023).
+      <p class="p2">Quais são os agentes do relevo?
+      </p>
+      </p>
+      <p class="p3">Os agentes que formam o relevo são fatores que atuam diretamente na definição das formas que
+        observamos na superfície terrestre. Podem ser divididos em dois grupos (MUNDO EDUCAÇÃO, 2023)
+      </p>
+      <p class="p3">Agentes endógenos ou internos</p>
+      <p class="p3">Dizem respeito à estrutura interna do planeta e às forças que trabalham no soerguimento ou
+        rebaixamento de certas áreas. Trata-se:
+      </p>
+      <ul class="list">
+        <li>do tectonismo, ou seja, da movimentação e do arranjo das placas tectônicas;</li>
+        <li>das atividades vulcânicas; </li>
+        <li>também das pressões feitas internamente pelo magma.</li>
+      </ul>
+      <p class="p3"> Agentes exógenos ou externos</p>
+      <p class="p3">Os fatores externos são aqueles que promovem o intemperismo tanto físico quanto químico-biológico
+        das rochas, os quais, por sua vez, podem originar os processos que caracterizam a erosão. São agentes exógenos:
+      </p>
+      <ul class="list">
+        <li>águas das chuvas, ventos, mares, rios, geleiras (tanto quando se movimentam quanto no momento do degelo),
+          variações de temperatura e a gravidade.
+        </li>
+      </ul>
+      <p class="p3">É importante notar que a ação antrópica acelera os processos de intemperismo e erosão,
+        transformando, assim, a paisagem e as formas de relevo.
+      </p>
+      <p class="bibliografia1">REFERÊNCIA BIBLIOGRÁFICA:</p>
+
+      <p class="bibliografia">RIBEIRO, Amarolina.”Formas de relevo”;Infoescola. Disponível
+        em:https://www.infoescola.com/geografia/formas-de-relevo/. Acesso em 25 de abril de 2023
+        ROXO, Caroline.”Veja os 5 principais problemas ambientais no Brasil”;AIESEC. Disponível
+        em:https://aiesec.org.br/5-problemas-ambientais-brasil/. Acesso em 25 de abril de 2023
+      </p>
+      <p class="bibliografia">BADUKA. Os 9 melhores exercícios sobre relevo com gabarito. Disponível
+        em:https://beduka.com/blog/exercicios/geografia-exercicios/exercicios-sobre-relevo/. Acesso em 04 de julho.
     </div>
 
   </main>
   <footer>
-    <div id="git">
-    <a class="link" href="https://github.com/kayquelopes">Meu github</a>
-    <a class="link" href="pagina3,4.html">Historia</a>
-  </div>
+   
   </footer>
 </body>
 
