Correção de nomes

--- a/pagina3,1.html
+++ b/pagina3,1.html
@@ -34,7 +34,7 @@
   <main class="conteiner">
     <div class="Principal1">
       <p class="p2">
-        Cartografia
+        Geopolítica
       </p>
     </div>
     <div class="Principal2">
