--- a/pagina3,4.html
+++ b/pagina3,4.html
@@ -13,7 +13,7 @@
   <header>
 
     <div class="banner">
-      <h1>POKEMON News</h1>
+      <h1>Problemas ambientais</h1>
     </div>
 
   </header>
@@ -34,68 +34,95 @@
   <main class="conteiner">
     <div class="Principal1">
       <p class="p2">
-        Pokémon GO - Evento Semana Aventura 2023
+        Problemas Ambientais
       </p>
     </div>
     <div class="Principal2">
-      <div class="hisimg">
-        <img class="imghis" src="imagem/imagem1/pokemon-go-evento-semana-aventura-2023.jpg" alt="">
+      <div class="Principal2">
+        <p class="p3">Os principais problemas ambientais que existem no Brasil e no mundo são ocasionados pela
+          intensificação das atividades humanas, como a produção industrial e a urbanização, pelo manejo inadequado dos
+          solos e pelo uso intensivo e não sustentável dos recursos naturais. Os principais problemas ambientais são os
+          seguintes (BRASIL ESCOLA, 2023):
+        </p>
+        <ul class="list">
+          <li>Poluição atmosférica;</li>
+          <li>Aquecimento global;</li>
+          <li>Poluição hídrica e dos solos;</li>
+          <li>Desmatamento e queimadas;</li>
+        </ul>
+        <div class="hisimg">
+          <p class="referenciaimg">Figura 15 - Queima de uma floresta
+          </p>
+          <img class="imghis" src="probAmbImg/incendioFloresta.jpeg" alt="">
+          <p class="referenciaimg" id="refImage">Fonte: Roxo, 2020
+          </p>
+        </div>
+        <ul class="list">
+          <li>Desertificação;</li>
+          <li>Perca de biodiversidade;</li>
+          <li>Descarte ikrregular de lixo</li>
+        </ul>
+
+        <p class="p2">Quais são os principais problemas ambientais do mundo?</p>
+        <p class="p3">
+          Os principais problemas ambientais do mundo foram causados pela ação antrópica sobre a natureza. Esse processo
+          se intensificou a partir da Revolução Industrial, que data do século XVIII, e começou a ser amplamente
+          discutido em escala internacional a partir da década de 1970, com a realização das conferências ambientais e
+          sobre o clima. Confira a seguir quais são os principais problemas ambientais enfrentados hoje no mundo (BRASIL
+          ESCOLA, 2023).
+        </p>
+
+        <p class="p2">
+          Poluição atmosférica
+        </p>
+        <p class="p3">
+          A poluição do ar ou atmosférica pode ser descrita como a presença, no ar, de gases poluentes, material
+          particulado, agentes biológicos e outros elementos que alterem a sua qualidade, problema é ocasionado
+          principalmente pela queima de combustíveis fósseis e pela atividade industrial nos grandes centros urbanos,
+          atividades essas que liberam substâncias como gás carbônico (CO2), monóxido de carbono (CO), óxidos de enxofre
+          (SO2 e SO3) e óxido de nitrogênio (NOx) na atmosfera (BRASIL ESCOLA, 2023).
+        </p>
+
+        <p class="p2">Aquecimento global</p>
+        <p class="p3">
+          O aquecimento global é o aumento anormal da temperatura média do planeta Terra. Esse fenômeno tem como causas a intensa exploração da natureza pelos seres humanos, ocasionando problemas como o desmatamento, e a emissão direta de gases poluentes na atmosfera por meio da atividade industrial e da queima de combustíveis fósseis (BRASIL ESCOLA, 2023).
+        </p>
+        <p class="p3">
+          Esse aumento da temperatura também gera outros problemas ambientais. Uma das principais consequências desse fato são as mudanças climáticas e o acontecimento cada vez mais recorrente de fenômenos extremos, como secas severas, chuvas muito volumosas e intensas, além do derretimento das calotas polares, aumento do nível dos oceanos e a perda da biodiversidade (BRASIL ESCOLA, 2023).
+        </p>
+
+        <p class="p2">Poluição hídrica</p>
+        <p class="p3">
+          A poluição hídrica acontece quando substâncias são lançadas nos corpos d’água e alteram as suas propriedades físicas, químicas e biológicas, o que pode causar a contaminação e, como consequência, gerar severos prejuízos para a população que depende daquele recurso e para a biodiversidade aquática. O descarte irregular de lixo e de resíduos urbanos, como esgoto, e industriais estão entre as principais causas da poluição hídrica (BRASIL ESCOLA, 2023).
+        </p>
+
+        <p class="p2">Poluição dos solos</p>
+        <p class="p3">
+          A poluição dos solos é descrita como a degradação química do substrato. Tem origem no descarte irregular de lixo e dejetos urbanos, industriais, da mineração e das usinas geradoras de eletricidade, no uso intensivo de defensivos agrícolas e agrotóxicos para a produção, no desmatamento e outros eventos que contribuem para a perda de fertilidade dos solos (BRASIL ESCOLA, 2023).
+        </p>
+
+        <p class="p2">Desmatamento</p>
+        <p class="p3">
+          Também chamado de desflorestamento, o desmatamento é a retirada da cobertura vegetal parcial ou total de um determinado lugar. A perda da cobertura vegetal deixa os solos desprotegidos e mais vulneráveis, ao mesmo tempo que afeta o funcionamento dos ecossistemas, contribui para o assoreamento dos rios e interfere na dinâmica dos climas locais e, a longo prazo, do clima global (BRASIL ESCOLA, 2023).
+        </p>
+
+        <p class="p2">Queimadas</p>
+        <p class="p3">
+          Também chamadas de incêndio florestais, as queimadas humanas são uma prática de limpeza de uma área com o uso de fogo. O fogo das queimadas elimina parte da biodiversidade das matas e contribui para a emissão de gases poluentes na atmosfera.Os incêndios são causados pelo calor extremo e pelo tempo seco, que resseca a vegetação e facilita o espalhamento das chamas (BRASIL ESCOLA, 2023).
+        </p>
+        
+        <p class="p2">Desertificação</p>
+        <p class="p3">
+          A desertificação é um fenômeno de degradação química e física dos solos, resultante do esgotamento da capacidade de produção do solo, o que tem como causas a exploração desse recurso de maneira intensiva para fins econômicos, o manejo inadequado, as queimadas sucessivas e o desmatamento. Fatores de ordem natural podem contribuir para a desertificação de áreas, como a presença de climas secos e as propriedades naturais do substrato (BRASIL ESCOLA, 2023).
+          <p class="p3">
+            Esse processo tem como efeitos a degradação física dos solos, a salinização e o aumento do potencial destrutivo das chuvas nas regiões áridas. Além disso, impacta direta e negativamente a população e a biodiversidade, tendo em vista que a desertificação deixa o solo impróprio para o plantio, dificulta a criação de animais e impede a formação de reservatórios de água potável (BRASIL ESCOLA, 2023)
+          </p>
+        </p>
       </div>
-      <p class="p3">A Niantic anunciou o evento Semana Aventura 2023 para o Pokémon GO, que traz os Pokémon Fósseis e
-        Pokémon de tipo Pedra em destaque! O evento contará com a estreia de Mega Tyranitar nas Megarreides e dos
-        Pokémon Amaura e Tyrunt em suas Formas Brilhantes! Confira todas as informações a seguir.</p>
-      <p class="p2">Data e hora</p>
-      <p class="p3">De quinta-feira, 27 de julho, às 10h, até quarta-feira, 2 de agosto de 2023, às 20h (horário local).
-      </p>
-      <p class="p2">Encontros na natureza</p>
-      <p class="p3">Os Pokémon a seguir aparecerão com mais frequência na natureza. Além disso, pela primeira vez no
-        Pokémon GO, os jogadores poderão encontrar Tyrunt e Amaura Brilhantes!</p>
 
-      <p class="p2">Ovos</p>
-      <p class="p3">Os seguintes Pokémon serão chocados de Ovos de 7 km. Tyrunt e Amaura chocados de Ovos terão mais
-        chances de ser um Pokémon Brilhante.</p>
-      <ul class="listnot">
-        <li>Tirtouga</li>
-        <li>Archen</li>
-        <li>Tyrunt</li>
-        <li>Amaura</li>
-      </ul>
-      <p class="p2">Encontros de tarefas de pesquisa de campo</p>
-      <p class="p3">Tarefas de pesquisa de campo exclusivas do evento estarão disponíveis. Os seguintes Pokémon poderão
-        ser encontrados ao concluir as tarefas:</p>
-
-      <p class="p2">Pesquisa temporária paga</p>
-      <p class="p3">Por US$ 2,00 (ainda não revelado em R$), os jogadores poderão acessar a Pesquisa temporária
-        exclusiva do evento. As recompensas incluem duas Incubadoras de Ovos, uma Superincubadora e encontros com
-        Pokémon temáticos do evento. A Pesquisa temporária tem um prazo, por isso as tarefas de Pesquisa e suas
-        recompensas desaparecerão na quarta-feira, 2 de agosto de 2023, às 20h, horário local.</p>
-      <p class="p3">Por US$ 2,00 (ainda não revelado em R$), os jogadores poderão acessar a Pesquisa temporária
-        exclusiva do evento. As recompensas incluem duas Incubadoras de Ovos, uma Superincubadora e encontros com
-        Pokémon temáticos do evento. A Pesquisa temporária tem um prazo, por isso as tarefas de Pesquisa e suas
-        recompensas desaparecerão na quarta-feira, 2 de agosto de 2023, às 20h, horário local.</p>
-      <p class="p2">Pesquisa temporária gratuita
-      </p>
-      <p class="p3">Também haverá uma Pesquisa temporária gratuita exclusiva do evento. Nessa Pesquisa temporária, os
-        jogadores precisarão escolher entre tarefas focadas em exploração ou pesquisa. Sendo uma Pesquisa temporária, as
-        tarefas e suas recompensas desaparecerão na quarta-feira, 2 de agosto de 2023, às 20h, horário local.</p>
-      <p class="p2">Bônus do evento
-      </p>
-      <p class="p3">Estes são os bônus que estarão ativos durante o evento Semana Aventura 2023:
-      </p>
-
-      <p class="p2">Desafio de coleção</p>
-      <p class="p3">Um desafio de coleção da Semana Aventura estará disponível para todos os jogadores. Ao completar o
-        desafio, os jogadores terão encontros com Tyrunt e Amaura, além de ganharem Poeira Estelar.</p>
-      <p class="p2">Reides
-      </p>
-      <p class="p3">Os seguintes Pokémon aparecerão em Reides.</p>
-
-      <p class="p2">Megarreides</p>
-
-      <p class="p3">Fonte: Pokémon GO Live</p>
   </main>
   <footer>
-    
+
   </footer>
 </body>
 
