ajuste nome banner

--- a/pagina2.html
+++ b/pagina2.html
@@ -13,7 +13,7 @@
   <header>
 
     <div class="banner">
-      <h1>Geografia</h1>
+      <h1>Cartográfica</h1>
     </div>
 
   </header>
@@ -34,7 +34,7 @@
   <main class="conteiner">
     <div class="Principal1">
       <p class="p2">
-        Cartografia
+        Cartográfia
       </p>
     </div>
     <div class="Principal2">
