ajuste nome banner

--- a/pagina3,5.html
+++ b/pagina3,5.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="banner">
-      <h1>POKEMON News</h1>
+      <h1>Geografia Econômica</h1>
     </div>
   </header>
   <nav>
