Correção <a>, add footer, correção banner

--- a/index.html
+++ b/index.html
@@ -79,10 +79,7 @@
     </div>
   </main>
   <footer>
-    <div id="git">
-      <a class="link" href="https://github.com/kayquelopes">Meu github</a>
-
-    </div>
+    <p>Site para fins de estudo</p>
   </footer>
 </body>
 
