--- a/pagina2.html
+++ b/pagina2.html
@@ -241,10 +241,10 @@
         https://images.app.goo.gl/eZR262gctjr8nR8h7. Acesso em 25 de abril de 2023
       </p>
     </div>
-    </div>
   </main>
-  <footer>
 
+  <footer>
+    <p>Site para fins de estudo</p>
   </footer>
 </body>
 
