--- a/pagina3,1.html
+++ b/pagina3,1.html
@@ -149,8 +149,7 @@
         <li>Superpotência nucleares</li>
         <li>Estados Unidos X União Soviética</li>
       </ul>
-      <p class="3">A Invenção da boba atômica levou os Estados Unidos ao patamar de superpotência que logo foi alcançado
-        pela União Soviética (DESCOMPLICA, 2022).</p>
+      <p class="p3">A Invenção da boba atômica levou os Estados Unidos ao patamar de superpotência que logo foi alcançado pela União Soviética (DESCOMPLICA, 2022).</p>
 
       <p class="bibliografia1">REFERÊNCIA BIBLIOGRÁFICA:</p>
 
@@ -165,7 +164,7 @@
     </div>
   </main>
   <footer>
-
+    <p>Site para fins de estudo</p>
   </footer>
 </body>
 
