--- a/pagina3,2.html
+++ b/pagina3,2.html
@@ -54,7 +54,6 @@
         anos. Seus principais tipos são: equatorial, tropical, temperado, frio, polar, mediterrâneo e desértico. No
         Brasil, predominam as variações do tropical — como tropical de altitude, semiárido e subtropical —, além do
         equatorial (MUNDO EDUCAÇÃO, 2023).
-        .
       </p>
       <p class="p3">Os quatro elementos que interferem nas condições climáticas são: temperatura, umidade, radiação e
         pressão atmosférica. Os principais fatores climáticos são: latitude, altitude, massas de ar, correntes
@@ -70,9 +69,7 @@
         Qual a diferença entre clima e tempo:
 
       </p>
-      <p class="p3">A “Clima”, como explicado antes, lida com períodos longos e reúne as características de uma região.
-        Para definir o clima, precisamos dos dados históricos da área estudada.Já o tempo se refere às condições
-        meteorológicas no momento em que a observação é realizada (MUNDO EDUCAÇÃO, 2023).
+      <p class="p3">A “Clima”, como explicado antes, lida com períodos longos e reúne as características de uma região.Para definir o clima, precisamos dos dados históricos da área estudada.Já o tempo se refere às condições meteorológicas no momento em que a observação é realizada (MUNDO EDUCAÇÃO, 2023).
       </p>
       <p class="bibliografia1">REFERÊNCIA BIBLIOGRÁFICA:</p>
 
@@ -83,7 +80,7 @@
 
   </main>
   <footer>
-    
+    <p>Site para fins de estudo</p>
   </footer>
 </body>
 
